<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.alameen.wael.hp.market.FirstFormActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f1_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar_layout" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hint"
            android:text="@string/some_hint"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:textColor="@color/font_color" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brand_spinner"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/hint">

        </Spinner>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:id="@+id/add_logo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_add_black_24dp"
            android:background="@drawable/logo_button"
            android:layout_below="@+id/hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/p_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:inputType="text"
            android:maxLines="20"
            android:hint="@string/enter_p_name"
            android:layout_below="@+id/brand_spinner"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/p_price"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/p_name"
            android:padding="10dp"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/p_price"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currency_spinner"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/hint2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/p_desc"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/currency_spinner"
            android:padding="10dp"
            android:inputType="text"
            android:maxLines="20"
            android:hint="@string/p_desc"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/p_colors"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/p_desc"
            android:padding="10dp"
            android:inputType="text"
            android:maxLines="20"
            android:hint="@string/p_colors"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/p_sizes"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/p_colors"
            android:padding="10dp"
            android:maxLines="10"
            android:hint="@string/p_sizes"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_spinner"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/p_sizes">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hint66"
            android:text="لضمان جودة افضل لصورة المنتج يفضل ان تكون بقياس 300x300 كحد اقصى"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/type_spinner"
            android:textSize="15sp"
            android:textColor="@color/font_color" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pick"
            android:layout_below="@+id/hint66"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:text="تحميل صور المنتج"
            android:background="@drawable/border_drawable"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/horizontal"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/pick"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pro_images_recycler">

        </android.support.v7.widget.RecyclerView>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hint2"
            android:text="@string/currency_type"
            android:textSize="15sp"
            android:textColor="@color/font_color"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/p_price"
            android:layout_alignLeft="@+id/p_price"
            android:layout_alignStart="@+id/p_price" />

    </RelativeLayout>

    </ScrollView>

</LinearLayout>
